--- a/templates/index.html
+++ b/templates/index.html
@@ -2,23 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>ESPN Scraper</title>
+    <title>Home</title>
 </head>
 <body>
-    <div>
-        <form action="#" method="POST">
-            <input type="text" name="team" placeholder="Enter a team name"/>
-            <input type="submit"/>
-        </form>
-    </div>
-    <div>
-        {% if team_leaders|length > 0 %}
-        <h3>Team Leaders</h3>
-        {% for player in team_leaders %}
-        <p>{{player["stat_name"] + ": "}}</p>
-        <p>{{player["position"]}}: {{player["name"]}}, {{player["stat"]}}</p>
-        {% endfor %}
-        {% endif %}
-    </div>
+<a href="team_leaders">Team Leaders</a>
 </body>
 </html>
