adding logo pt1

--- a/flask_app/templates/team_leaders.html
+++ b/flask_app/templates/team_leaders.html
@@ -13,6 +13,7 @@
     </div>
     <div>
         {% if team_leaders|length > 0 %}
+        <img src="{{ logo }}">
         <h3>Team Leaders</h3>
         {% for player in team_leaders %}
         <p>{{player["stat_name"] + ": "}}</p>
